added something for Q2

--- a/w207_Project_1/Alejandro_Pelcastre_project1.ipynb
+++ b/w207_Project_1/Alejandro_Pelcastre_project1.ipynb
@@ -513,6 +513,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I see that the Training Time stays nearly constant even after adding more data. This makes sense since KNN doesn't really do any training, it just loads the data. It makes sense that evaluating accuracy increases approximately linearly since you must compare what you're predicting with every other data point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "7RvpMWezTzOi"
    },
